# table-synthesizers

./: .dockerignore  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.md  SYNTHESIZER_STATUS.md  alfred311.yml  check_and_fix_pytorch.sh  dataset  dockerfile  main.py  mkdocs.yml  pyproject.toml  requirements-cpu.txt  requirements-docs.txt  requirements-gpu.txt  requirements-optional.txt  requirements-synthcity.txt  requirements.txt  run_all_tests.sh  run_comprehensive_tests.sh  setup.cfg  table_synth_workflow_demo.ipynb  test_all_models.py  test_all_models_cuda.py  test_library.py  train_all_compatible_models.py  train_cpu_forced.sh  train_cpu_only.py  train_with_gpu_fix.sh
.github/scripts/: gemini_review.py
.github/workflows/: ci-cd.yaml  docker-build.yaml  edge-case-tests.yaml  gemini-code-review.yaml  integration-tests.yaml  publish-base-image.yaml  publish-images.yaml  slack-notify.yml  tests.yml  unit-tests.yaml
config/: README.md  default_AIM.json  default_ARF.json  default_AutoDiff.json  default_BayesianNetwork.json  default_CART.json  default_CTGAN.json  default_DPCART.json  default_GREAT.json  default_GaussianCopula.json  default_Identity.json  default_NFlow.json  default_PATE-CTGAN.json  default_SMOTE.json  default_TVAE.json  default_TabDDPM.json  default_TabDiff.json  default_TabPFGen.json  default_TabSyn.json
config/templates/: aim_config.json  autodiff_config.json  cart_config.json  cllm_config.json  ctgan_config.json  identity_config.json  tabddpm_config.json  tabpfn_unsupervised_config.json  tvae_config.json
docker/: .dockerignore  Dockerfile.base  Dockerfile.gpu  Dockerfile.synthcity  docker-compose.yml
docs/: ALGORITHM_COMPARISON_SUMMARY.txt  BATCH_SIZE_OPTIMIZATION_SUMMARY.md  BLACKWELL_GPU_FINAL_SOLUTION.md  CHANGES_SUMMARY.md  CLAUDE.md  COMPATIBILITY_GUIDE.md  CONFIG_EXTERNALIZATION_SUMMARY.md  CPU_CORES_GUIDE.md  CTGAN_vs_PATECTGAN_Comparison.md  EDGE_CASE_TESTING.md  ENHANCED_TRAINING_GUIDE.md  GPU_ACCELERATION_GUIDE.md  GPU_COMPATIBILITY_GUIDE.md  HYPERPARAMETER_ANALYSIS.md  HYPERPARAMETER_COMPARISON_SUMMARY.txt  ITERATIVE_TRAINING_GUIDE.md  ITERATIVE_TRAINING_SUMMARY.md  MODEL_GPU_CONFIGS.md  PLATFORM_COMPATIBILITY_FIX_SUMMARY.md  POC_RESULTS.md  POC_SUMMARY.md  QUICK_START.md  QUICK_START_GPU.md  README.md  TABSYN_POC_GUIDE.md  TEST_VALIDATION_REPORT.md  TLS_FIX_GUIDE.md  TODO.md  WANDB_INTEGRATION_GUIDE.md  WANDB_INTEGRATION_SUMMARY.md  implementation_plan.md  index.md
docs/api/: base.md  table_synthesizer.md
example/: README.md  benchmark_synthesizers.py  example.ipynb  run_all_synthesizers_old.py  run_comprehensive_benchmark.py  run_comprehensive_benchmark.sh  simple_demo.py  simple_test.py
example/sandbox/: conversions_all_8-1-25.csv
example/sandbox_preprocessed/: analyze_csv_files.py
example/sandboxcopy/: analyze_preprocessed_data.py  preprocess_amazon_data.py
patches/: apply_synthcity_patch.sh  synthcity_pgmpy_compatibility.patch
presentation/: README.md
scripts/: download_synthony_datasets.py
scripts/autodiff_eval/: Correlation.py  Fidelity.py
src/: evaluationScript  trainScript
src/data_loader/: loader.py
src/stg/: __init__.py  base.py  config_manager.py  data_manager.py  evaluation.py  gpu_utils.py  metrics_integration_example.py  metrics_manager.py  path_config.py  tableSynthesizer.py  wandb_manager.py  zero_workaround.py
src/stg/AIM/: AIM.py  __init__.py  hdmm_matrix.py
src/stg/ARF/: __init__.py  arf_synthesizer.py
src/stg/AutoDiff/: TabDDPMdiff.py  __init__.py  autodiff_synthesizer.py  autoencoder.py  diffusion.py  process_GQ.py
src/stg/BayesianNetwork/: __init__.py  bayesian_network_synthesizer.py
src/stg/CART/: __init__.py  cart.py  cart_synthesizer.py
src/stg/CLLM/: __init__.py  cllm_synthesizer.py
src/stg/CTGAN/: __init__.py  ctgan.py  data_sampler.py  models.py
src/stg/DPCART/: __init__.py  dpcart.py  dpcart_synthesizer.py
src/stg/GREAT/: __init__.py  great_synthesizer.py
test/: dataframe_test_utils.py  test_AIM.py  test_ARF.py  test_AutoDiff.py  test_BayesianNetwork.py  test_CART.py  test_CTGAN.py  test_DPCART.py  test_GREAT.py  test_NFlow.py  test_PATECTGAN.py  test_SMOTE.py  test_TVAE.py  test_TabDDPM.py  test_TabSyn.py  test_affected_modules.py  test_identity.py  test_identity_unit.py  test_libzero_proof.py  test_libzero_workaround.py  test_models_comprehensive.py  test_problem_models.py  test_pytorch_compatibility.py  test_sandbox_all.py  test_suite.py  test_tabsyn_fixed.py  try_sampling.py  utils.py
test/test_data/: data_info.py
tests/: conftest.py  run_changed_edge_cases.py  run_changed_models.py  test_docker_config.py
tests/integration/: dataframe_test_utils.py  setup_sandbox_datasets.py  test_affected_modules.py  test_aim_integration.py  test_arf_integration.py  test_autodiff_integration.py  test_base_synthesizer_managers.py  test_bayesian_network_integration.py  test_cart_integration.py  test_cli_entrypoint.py  test_ctgan_integration.py  test_dataframe_loader.py  test_dataloader_integration.py  test_device_training.py  test_dpcart_integration.py  test_edge_cases.py  test_gaussian_copula_integration.py  test_great_integration.py  test_identity_integration.py  test_identity_unit.py  test_libzero_proof.py  test_libzero_workaround.py  test_managers_integration.py  test_models_comprehensive.py  test_nflow_integration.py  test_patectgan_integration.py  test_problem_models.py  test_pytorch_compatibility.py  test_smote_integration.py  test_tabddpm_integration.py  test_tabdiff_integration.py  test_tabpfgen_integration.py  test_tabsyn_fixed.py  test_tabsyn_integration.py  test_tvae_integration.py  utils.py
tests/unit/: conftest.py  test_aim.py  test_arf.py  test_autodiff.py  test_bayesian_network.py  test_cart.py  test_cllm.py  test_ctgan.py  test_device_detection.py  test_dpcart.py  test_gaussian_copula.py  test_great.py  test_ltm_vae.py  test_nflow.py  test_patectgan.py  test_smote.py  test_tabddpm.py  test_tabdiff.py  test_tabpfgen.py  test_tabpfn_unsupervised.py  test_tabsyn.py  test_threading_config.py  test_tvae.py
(+90 files in other folders)
