[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Test configuration for the new tests/ directory structure
testpaths = ["tests"]
python_files = ["test_*.py", "!test_models_comprehensive.py", "!test_problem_models.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Explicitly ignore standalone test scripts
norecursedirs = [".*", "build", "dist", "*.egg"]
markers = [
    "gpu: tests that require any GPU (CUDA or MPS)",
    "cuda: tests that specifically require NVIDIA CUDA",
    "slow: tests that take significant time to run",
]