[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "table-synthesizers"
version = "0.0.1"
description = "A library for synthetic table generation"
readme = "README.md"
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE", "LICENSE-APACHE", "LICENSE-MIT"]
authors = [{ name = "UCLA Trustworthy AI Lab" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.2.3,<3.0.0",
    "numpy>=1.26.4,<2.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.11.3",
    "imbalanced-learn>=0.14.1",
    "category_encoders>=2.6.0",
    "tqdm>=4.66.4",
    "tomli>=2.0.1",
    "tomli_w>=1.2.0",
    "icecream>=2.1.0",
    "seaborn>=0.13.0",
    "sdv>=1.34.0",
]

[project.optional-dependencies]
# gpu/cpu extras list identical package specs; the difference is which torch
# wheel index you install from beforehand (see requirements-gpu.txt /
# requirements-cpu.txt) — pip extras can't express --index-url selection.
gpu = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "ema-pytorch>=0.7.0",
    "boto3>=1.26.0",
]
cpu = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers>=4.0.0",
    "datasets>=2.0.0",
    "accelerate>=0.20.0",
    "ema-pytorch>=0.7.0",
    "boto3>=1.26.0",
]
synthcity = ["synthcity>=0.2.12"]
docs = ["mkdocs>=1.6.1", "mkdocs-material>=9.7.4", "mkdocstrings[python]>=1.0.3"]
optional = [
    "tabpfn>=2.0.0",
    "tabpfn-extensions>=0.1.0",
    "openai>=1.0.0",
    "wandb>=0.15.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
]
dev = [
    "pytest>=8.2.2",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/UCLA-Trustworthy-AI-Lab/table-synthesizers"
Repository = "https://github.com/UCLA-Trustworthy-AI-Lab/table-synthesizers"
"Upstream - SynthCity" = "https://github.com/vanderschaarlab/synthcity"
"Upstream - TabSyn" = "https://github.com/amazon-science/tabsyn"
"Upstream - AutoDiffusion" = "https://github.com/UCLA-Trustworthy-AI-Lab/AutoDiffusion"
"Upstream - TabDDPM" = "https://github.com/yandex-research/tab-ddpm"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Test configuration for the new tests/ directory structure
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Standalone scripts that have test_ functions but aren't pytest suites
addopts = "--ignore=tests/integration/test_models_comprehensive.py --ignore=tests/integration/test_problem_models.py --ignore=tests/integration/test_managers_integration.py"
norecursedirs = [".*", "build", "dist", "*.egg"]
markers = [
    "gpu: tests requiring PyTorch with CUDA/MPS support",
    "synthcity: tests requiring synthcity package",
    "edge_case: edge case data scenarios",
    "edge_core: edge cases for core/base models (Identity, CART, DPCART, TabDiff, TabPFGen, TVAE, etc.)",
    "edge_synthcity: edge cases for synthcity models (ARF, BayesianNetwork, GREAT, NFlow)",
    "edge_gpu: edge cases for GPU-heavy models (CTGAN, PATECTGAN, TabDDPM, AutoDiff, TabSyn)",
    "slow: tests that take >30s",
]