[metadata]
name = stg
version = 0.0.1
description = A library for synthetic table generation
author = UCLA Trustworthy AI Lab
license = MIT
url = https://github.com/ucla-trustworthy-ai-synthdata/lddp-optimus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.24.3
    pandas>=2.1.0  
    torch>=2.0.0
    scikit-learn>=1.3.1
    category_encoders
    tomli

[options.packages.find]
where = src
exclude = 
    test*
    tests*
    *.test*
    *.tests*

[options.extras_require]
dev =
    pytest
    tqdm
    scikit-learn
