[metadata]
name = stg
version = 0.0.1
description = A library for synthetic table generation
author = UCLA Trustworthy AI Lab
license = Apache-2.0 OR MIT
url = https://github.com/ucla-trustworthy-ai-synthdata/lddp-optimus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, LICENSE-APACHE, LICENSE-MIT
project_urls =
    Upstream - SynthCity = https://github.com/vanderschaarlab/synthcity
    Upstream - TabSyn = https://github.com/amazon-science/tabsyn
    Upstream - AutoDiffusion = https://github.com/UCLA-Trustworthy-AI-Lab/AutoDiffusion
    Upstream - TabDDPM = https://github.com/yandex-research/tab-ddpm
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.26.4,<2.0.0
    pandas>=2.2.3,<3.0.0
    torch>=2.2.2
    tomli>=2.0.1
    pyarrow>=14.0.0
    scikit-learn>=1.6.1
    scipy>=1.11.3
    tqdm>=4.66.4
    sdv>=1.34.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=8.2.2
    tqdm>=4.66.4
    scikit-learn>=1.6.1
