[metadata]
name = stg
version = 0.0.1
description = A library for synthetic table generation
author = UCLA Trustworthy AI Lab
license = Apache-2.0 OR MIT
url = https://github.com/ucla-trustworthy-ai-synthdata/lddp-optimus
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: MIT License
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, LICENSE-APACHE, LICENSE-MIT
project_urls =
    Upstream - SynthCity = https://github.com/vanderschaarlab/synthcity
    Upstream - TabSyn = https://github.com/amazon-science/tabsyn
    Upstream - AutoDiffusion = https://github.com/UCLA-Trustworthy-AI-Lab/AutoDiffusion
    Upstream - Synth-MIA = https://github.com/UCLA-Trustworthy-AI-Lab/Synth-MIA

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    pandas
    torch
    tomli
    libzero==0.0.8

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
    tqdm
    scikit-learn
evaluation =
    catboost>=1.2.2
    dask>=2024.1.0
    dython
    geomloss
    kaleido>=0.2.1
    matplotlib>=3.8.0
    plotly>=5.17.0
    scikit_learn>=1.3.1
    scipy>=1.11.3
    sdmetrics==0.11.1
    seaborn>=0.13.0
    synthcity==0.2.11
    xgboost>=2.0.2
